fix: add align items rule to fix vertical placement

--- a/src/pages/Flat/flat.scss
+++ b/src/pages/Flat/flat.scss
@@ -41,6 +41,8 @@
   gap: 20px;
   flex-wrap: wrap;
   flex-direction: row;
+  align-items: flex-start;
+
   .accordion {
     flex: 1 0 300px;
   }
